# summarizer-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  ui.py
src/: core.py
